--- a/app.json
+++ b/app.json
@@ -20,7 +20,7 @@
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
-      "permissions": ["SCHEDULE_EXACT_ALARM", "NOTIFICATIONS"],
+      "permissions": ["SCHEDULE_EXACT_ALARM", "POST_NOTIFICATIONS"],
       "package": "com.anonymous.myapp"
     },
     "web": {
@@ -33,8 +33,7 @@
         "expo-notifications",
         {
           "icon": "./assets/images/icon.png",
-          "color": "#ffffff",
-          "permissions": ["SCHEDULE_EXACT_ALARM"]
+          "color": "#ffffff"
         }
       ],
       "expo-router",
